feat(entry-point-facade): message service
