# facades/entry-point/src/controllers/auth.controller.ts
@@ -1,8 +1,6 @@
-// Uncomment these imports to begin using these cool features!
-
 import {inject} from '@loopback/core';
 import {post, requestBody} from '@loopback/openapi-v3';
-import { authorize } from 'loopback4-authorization';
+import {authorize} from 'loopback4-authorization';
 import {AuthAccessor} from '../services';
 import {UserLogin, UserLoginSuccess} from '../types';
 
@@ -12,7 +10,7 @@ export class AuthController {
     private readonly authService: AuthAccessor,
   ) {}
 
-  @authorize({permissions: ["*"]})
+  @authorize({permissions: ['*']})
   @post('/login')
   async loginUser(
     @requestBody()
